--- a/.github/workflows/update-m3u.yml
+++ b/.github/workflows/update-m3u.yml
@@ -1,4 +1,7 @@
-name: Update M3U Playlist
+name: Atom M3U
+
+permissions:
+  contents: write
 
 on:
   schedule:
@@ -6,33 +9,43 @@ on:
   workflow_dispatch:
 
 jobs:
-  update-m3u:
+  update-atom-m3u:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-    
+
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-        
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.10'
-        
-    - name: Install dependencies
-      run: |
-        pip install requests urllib3
-        
-    - name: Run M3U Generator
-      run: python "atom.py"
-      
-    - name: Commit and push
-      run: |
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
-        git add -A
-        git commit -m "Update M3U playlist - $(date +'%Y-%m-%d %H:%M:%S')" || exit 0
-        git push
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install requests beautifulsoup4
+
+      - name: Configure Git
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+
+      - name: Run Atom Generator
+        run: python atom.py
+
+      - name: Commit Changes
+        run: |
+          git add atom.m3u
+          git commit -m "Auto-update atom.m3u" || echo "No changes to commit"
+
+      - name: Pull Latest Changes
+        run: |
+          git fetch origin main
+          git rebase origin/main || git rebase --abort
+
+      - name: Push Changes
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          git push https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }} main
